--- a/report/sections/content.tex
+++ b/report/sections/content.tex
@@ -10,5 +10,51 @@
 %%
 %% Version 1.0, 2018-04-16
 
-\section{Implementierung}
-\label{ch:Implementation}
+\section{First Content Section}
+\label{ch:FirstContentSection}
+
+%% -------------------
+%% | Example content |
+%% -------------------
+The content chapters of your thesis should of course be renamed. How many
+chapters you need to write depends on your thesis and cannot be said in general.
+
+Check out the examples theses in the SDQWiki:
+
+\url{https://sdqweb.ipd.kit.edu/wiki/Form_der_Ausarbeitung_bei_Seminaren}
+
+Of course, you can split this .tex file into several files if you prefer. 
+
+
+\subsection{First Subsection}
+\label{sec:FirstContentSection:FirstSubSection}
+
+\dots
+
+\subsection{A Subsection}
+\label{sec:FirstContentSection:FirstSubSubSection}
+
+\dots
+
+
+\section{Second Content Section}
+\label{ch:SecondContentSection}
+
+\dots
+
+\subsection{First Subsection}
+\label{sec:SecondContentSection:FirstSubsection}
+
+\dots
+
+\subsection{Second Subsection}
+\label{sec:SecondContentSection:SecondSubsection}
+
+\dots
+
+Add additional content sections if required by adding new .tex files in the
+\code{sections/} directory and adding an appropriate 
+\code{\textbackslash input} statement in \code{thesis.tex}. 
+%% ---------------------
+%% | / Example content |
+%% ---------------------
